<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".fragment_data_barang">

    <item android:id="@+id/action_reset_edit_barang"
        android:title="@string/action_reset"
        app:showAsAction="never"
        android:icon="@drawable/ic_delete_forever_white_24dp"/>

    <item android:id="@+id/action_delete"
        app:showAsAction="ifRoom"
        android:title="@string/action_delete"
        android:icon="@drawable/ic_delete_black_24dp" />

    <item android:id="@+id/action_save_edit_barang"
        app:showAsAction="ifRoom"
        android:title="@string/action_save"
        android:icon="@drawable/ic_done_white_24dp" />
</menu>